src/test/ui/parser/suggest-const-for-global-var.rs
let X: i32 = 12;
//~^ ERROR expected item, found keyword `let`

fn main() {
    println!("{}", X);
}
